--- a/parse-results.ipynb
+++ b/parse-results.ipynb
@@ -144,11 +144,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
+   "id": "35db9232-d1b3-466d-b146-1600b6746364",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'data/Садовое кольцо/test.csv'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.join(race_results_dir, 'test.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "5dd54f41-03b0-4f45-890f-6a4e35b98574",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "from pathlib import Path\n",
     "from copy import deepcopy\n",
     "\n",
     "race_results = {\n",
@@ -157,9 +180,12 @@
     "}\n",
     "\n",
     "for race in race_config['groups']:\n",
+    "    race_results_dir = Path(os.path.join(\"data\", race['name']))\n",
+    "    race_results_dir.mkdir(exist_ok=True)\n",
     "    cluster_results = deepcopy(race)\n",
     "    for cluster, result_link in race['results'].items():\n",
     "        cluster_results['results'][cluster] = get_results(result_link + '.json')\n",
+    "        cluster_results['results'][cluster].to_csv(os.path.join(race_results_dir, f'{cluster}.csv'))\n",
     "    race_results['groups'].append(cluster_results)"
    ]
   },
@@ -193,10 +219,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "273 273\n",
-      "429 462\n",
-      "563 623\n",
-      "298 302\n"
+      "282 282\n",
+      "440 474\n",
+      "591 653\n",
+      "305 309\n"
      ]
     }
    ],
@@ -211,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "bb42af2a-484e-4a67-936e-ef1d050fe3eb",
    "metadata": {},
    "outputs": [],
@@ -220,7 +246,8 @@
     "    tt_results = deepcopy(race)\n",
     "    tt_results['results'] = get_results(race['results'] + '.json')\n",
     "    set_tt_cluster(tt_results['results'], official_clusters)\n",
-    "    race_results['time-trials'].append(tt_results)"
+    "    race_results['time-trials'].append(tt_results)\n",
+    "    # tt_results['results'].to_csv(f\"data/tt-results/{tt_results['name']}.csv\")"
    ]
   },
   {
@@ -320,16 +347,6 @@
     "    data.index += 1\n",
     "    data.to_csv(f'data/cluster_{cluster}.csv')\n",
     "writer.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "fa3a7de1-fb09-43d0-8081-20f8673527dc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# all_results.sort_values('total', ascending=False).to_excel('current_standing.xlsx')"
    ]
   },
   {
