refactor: moved part of the code to separate file

--- a/parse-results.ipynb
+++ b/parse-results.ipynb
@@ -28,6 +28,20 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "94864eab-187b-4df2-a1d4-44d811526551",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cr_racing_results import (\n",
+    "    RaceResults,\n",
+    "    RaceType,\n",
+    "    update_clusters\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "e4021335-388a-4797-88d2-12833a81e0c1",
    "metadata": {},
    "outputs": [],
@@ -38,61 +52,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "ce4d54d9-c751-4fe0-8763-d7dd4b2a2ec9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from typing import Union\n",
-    "\n",
-    "\n",
-    "COLUMNS = ['bib', 'name', 'gender', 'category', 'status', 'rank_abs', 'result', 'result_time', 'team', 'club']\n",
-    "\n",
-    "def get_results(results_url: str, full: bool = False) -> pd.DataFrame | dict:\n",
-    "    r = requests.get(results_url, params=dict(page=1))\n",
-    "    r.raise_for_status()\n",
-    "    results = r.json()\n",
-    "\n",
-    "    full_results = results['items']\n",
-    "    for page in range(2, results['page_info']['totalPages'] + 1):\n",
-    "        r = requests.get(results_url, params=dict(page=page))\n",
-    "        r.raise_for_status()\n",
-    "        full_results.extend(r.json()['items'])\n",
-    "    \n",
-    "    if full:\n",
-    "        return full_results\n",
-    "    results_df = pd.DataFrame(full_results, columns=COLUMNS)\n",
-    "    return results_df"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
-   "id": "fbc7ce6b-dc91-4667-8d67-26d7fc030437",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# r = get_results(race_config['groups'][-1]['results']['B'] + '.json', True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0816e204-dc45-4f17-9c6c-0458c6181cd0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "83cd8472-ae4c-47bf-a72f-fe41014cdf22",
    "metadata": {},
    "outputs": [],
    "source": [
     "from itertools import chain, repeat, islice\n",
     "\n",
-    "points = [100,  98,  96,  94,  92,  90,  88,  86,  84,  82,  80,  78,  76,\n",
+    "POINTS = [100,  98,  96,  94,  92,  90,  88,  86,  84,  82,  80,  78,  76,\n",
     "        74,  72,  70,  68,  66,  64,  62,  60,  58,  56,  54,  52,  50,\n",
     "        48,  46,  44,  42,  40,  38,  36,  34,  32,  30,  28,  26,  24,\n",
     "        22,  20,  20,  20,  20,  20,  20,  20,  20,  20,  20]\n",
@@ -104,12 +71,12 @@
     "    return islice(_pad_infinite(iterable, padding), size)\n",
     "\n",
     "def generate_points(n_places: int):\n",
-    "    return list(_pad(points, n_places, 0))"
+    "    return list(_pad(POINTS, n_places, 0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "ab24dd2a-787f-4e41-90e0-7e751b5e4b08",
    "metadata": {},
    "outputs": [],
@@ -130,42 +97,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "82672b16-a403-4561-8445-fe5a4ea249ca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def set_tt_cluster(tt_results: pd.DataFrame, clusters: dict[str, tuple[str]]) -> None:\n",
-    "    tt_results['cluster'] = 'C'\n",
-    "    tt_results.loc[tt_results.gender == 'female', 'cluster'] = 'F'\n",
+    "def set_tt_cluster(tt_results: pd.DataFrame, clusters: dict[str, tuple[str]], column_name: str = 'cluster') -> None:\n",
+    "    tt_results[column_name] = 'C'\n",
+    "    tt_results.loc[tt_results.gender == 'female', column_name] = 'F'\n",
     "    for cluster, racers in official_clusters.items():\n",
-    "        tt_results.loc[tt_results.name.str.startswith(racers), 'cluster'] = cluster"
+    "        tt_results.loc[tt_results.name.str.startswith(racers), column_name] = cluster"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "35db9232-d1b3-466d-b146-1600b6746364",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'data/Садовое кольцо/test.csv'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.path.join(race_results_dir, 'test.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "5dd54f41-03b0-4f45-890f-6a4e35b98574",
    "metadata": {},
    "outputs": [],
@@ -180,18 +126,12 @@
     "}\n",
     "\n",
     "for race in race_config['groups']:\n",
-    "    race_results_dir = Path(os.path.join(\"data\", race['name']))\n",
-    "    race_results_dir.mkdir(exist_ok=True)\n",
-    "    cluster_results = deepcopy(race)\n",
-    "    for cluster, result_link in race['results'].items():\n",
-    "        cluster_results['results'][cluster] = get_results(result_link + '.json')\n",
-    "        cluster_results['results'][cluster].to_csv(os.path.join(race_results_dir, f'{cluster}.csv'))\n",
-    "    race_results['groups'].append(cluster_results)"
+    "    race_results['groups'].append(RaceResults.group_from_config(race))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "a601164b-9ab0-4f83-9697-b176ae188c49",
    "metadata": {},
    "outputs": [],
@@ -202,16 +142,18 @@
     "\n",
     "group_clusters = defaultdict(set)\n",
     "for race in race_results['groups']:\n",
-    "    for cluster, results in race['results'].items():\n",
+    "    for cluster, results in race.results.items():\n",
     "        group_clusters[cluster].update(map(shorten_name, results.name.unique()))\n",
-    "        \n",
+    "\n",
+    "cluster_from_group = set()\n",
     "for cluster in group_clusters:\n",
-    "    group_clusters[cluster].update(official_clusters[cluster])"
+    "    cluster_from_group.update(group_clusters[cluster])\n",
+    "    # group_clusters[cluster].update(official_clusters[cluster])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "c4360f4a-d072-49fb-bca0-9f8a8361bf0c",
    "metadata": {},
    "outputs": [
@@ -219,40 +161,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "282 282\n",
-      "440 474\n",
-      "591 653\n",
-      "305 309\n"
+      "250 279 217\n",
+      "438 444 248\n",
+      "603 601 290\n",
+      "288 309 150\n"
      ]
     }
    ],
    "source": [
     "has_cluster = set()\n",
+    "original_off_clusters = deepcopy(official_clusters)\n",
     "\n",
     "for cluster, group in group_clusters.items():\n",
-    "    official_clusters[cluster] = tuple(group - has_cluster)\n",
-    "    print(len(official_clusters[cluster]), len(group))\n",
+    "    official_clusters[cluster] = tuple((set(official_clusters[cluster]) - cluster_from_group) | (group - has_cluster))\n",
+    "    print(len(original_off_clusters[cluster]), len(official_clusters[cluster]), len(group))\n",
     "    has_cluster.update(group)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "id": "ed4d95e1-397e-4f8e-a078-d212c65fd59b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "id": "bb42af2a-484e-4a67-936e-ef1d050fe3eb",
    "metadata": {},
    "outputs": [],
    "source": [
     "for race in race_config['time-trials']:\n",
-    "    tt_results = deepcopy(race)\n",
-    "    tt_results['results'] = get_results(race['results'] + '.json')\n",
-    "    set_tt_cluster(tt_results['results'], official_clusters)\n",
-    "    race_results['time-trials'].append(tt_results)\n",
+    "    race_results['time-trials'].append(RaceResults.tt_from_config(race, official_clusters))\n",
     "    # tt_results['results'].to_csv(f\"data/tt-results/{tt_results['name']}.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "id": "de22fd6a-941b-4866-9b58-e512035d5b80",
    "metadata": {},
    "outputs": [],
@@ -268,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
    "id": "b20c985f-a2ff-4666-8f32-fd717771bd1f",
    "metadata": {},
    "outputs": [],
@@ -276,8 +224,8 @@
     "cluster_standing = {}\n",
     "\n",
     "for race in race_results['groups']:\n",
-    "    for cluster, results in race['results'].items():\n",
-    "        race_points = get_points_for_race(results, race['name'])\n",
+    "    for cluster, results in race.results.items():\n",
+    "        race_points = get_points_for_race(results, race.name)\n",
     "        if cluster in cluster_standing:\n",
     "            cluster_standing[cluster] = pd.merge(cluster_standing[cluster], race_points, how='outer', on='name')\n",
     "        else:\n",
@@ -285,14 +233,14 @@
     "\n",
     "for race in race_results['time-trials']:\n",
     "    for cluster in cluster_standing:\n",
-    "        cluster_results = race['results'][race['results']['cluster'] == cluster]\n",
-    "        race_points = get_points_for_race(cluster_results, race['name'])\n",
+    "        cluster_results = race.results[race.results['cluster'] == cluster]\n",
+    "        race_points = get_points_for_race(cluster_results, race.name)\n",
     "        cluster_standing[cluster] = pd.merge(cluster_standing[cluster], race_points, how='outer', on='name')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 54,
    "id": "d74fe4f3-39a5-4ba3-9d02-802112ff2e16",
    "metadata": {},
    "outputs": [],
@@ -300,15 +248,15 @@
     "from itertools import chain\n",
     "race_order = list(map(lambda x: x[-1], sorted(\n",
     "    chain(\n",
-    "        ((race['order'], race['name']) for race in race_config['groups']),\n",
-    "        ((race['order'], race['name']) for race in race_config['time-trials']),\n",
+    "        ((race.order, race.name) for race in race_results['groups']),\n",
+    "        ((race.order, race.name) for race in race_results['time-trials']),\n",
     "    )\n",
     ")))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 55,
    "id": "f7ec8763-549b-401c-96e8-5fb64460dd4a",
    "metadata": {},
    "outputs": [],
@@ -334,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 56,
    "id": "aaed384f-fb78-4de0-82b8-12c6681ff138",
    "metadata": {},
    "outputs": [],
@@ -350,9 +298,155 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "85fcf016-a764-401c-bec3-f0940ea3464c",
+   "metadata": {},
+   "source": [
+    "# Менялись ли кластеры между гонок"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "3c9d3183-7fb5-4b58-8e74-9a9b4e3cc827",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from functools import reduce\n",
+    "all_dfs = reduce(lambda  left,right: pd.merge(left,right, on=['name'], how='outer'), (pd.concat(dfs) for race_name, dfs in all_results.items()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "0ff0b67f-6c7a-4bc7-bca7-e5b8e1a2f29c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_results = defaultdict(list)\n",
+    "for race in race_results['groups']:\n",
+    "    for cluster, results in race.results.items():\n",
+    "        set_tt_cluster(results, official_clusters, 'fixed_cluster')\n",
+    "        set_tt_cluster(results, original_off_clusters, 'official_cluster')\n",
+    "        results['real_cluster'] = cluster\n",
+    "        all_results[race.name].append(results.loc[:, ['name', 'real_cluster']].rename({'real_cluster': race.name}, axis=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "ba9c16fb-e18a-4d50-bc81-75267aa5be87",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>Садовое кольцо</th>\n",
+       "      <th>Верея</th>\n",
+       "      <th>Дубна</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>Сальников Роман</td>\n",
+       "      <td>A</td>\n",
+       "      <td>A</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>156</th>\n",
+       "      <td>Карпов Антон</td>\n",
+       "      <td>A</td>\n",
+       "      <td>A</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>370</th>\n",
+       "      <td>Дмитриев Андрей</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>712</th>\n",
+       "      <td>Худиев Омар</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>B</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>188</th>\n",
+       "      <td>Попов Сергей</td>\n",
+       "      <td>C</td>\n",
+       "      <td>B</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>362</th>\n",
+       "      <td>Нечаев Виктор</td>\n",
+       "      <td>C</td>\n",
+       "      <td>B</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>548</th>\n",
+       "      <td>Руез Фабьен</td>\n",
+       "      <td>C</td>\n",
+       "      <td>A</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                name Садовое кольцо Верея Дубна\n",
+       "78   Сальников Роман              A     A     B\n",
+       "156     Карпов Антон              A     A     B\n",
+       "370  Дмитриев Андрей              C     C     B\n",
+       "712      Худиев Омар            NaN     B     A\n",
+       "188     Попов Сергей              C     B     B\n",
+       "362    Нечаев Виктор              C     B     B\n",
+       "548      Руез Фабьен              C     A   NaN"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.concat([\n",
+    "    all_dfs.loc[(all_dfs['Дубна'] != all_dfs['Верея']) & ~all_dfs['Дубна'].isna() & ~all_dfs['Верея'].isna()],\n",
+    "    all_dfs.loc[(all_dfs['Садовое кольцо'] != all_dfs['Верея']) & ~all_dfs['Садовое кольцо'].isna() & ~all_dfs['Верея'].isna()],\n",
+    "    all_dfs.loc[(all_dfs['Дубна'] != all_dfs['Верея']) & ~all_dfs['Дубна'].isna() & ~all_dfs['Верея'].isna()]\n",
+    "]).drop_duplicates()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86c5fba1-88c8-4b9e-aa6e-40e2e9ae7877",
+   "id": "1cf2aecc-39ad-40e6-afa0-84f42b9b6b0e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -374,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
