refactor: moved functions into class and restructured config with clusters

--- a/parse-results.ipynb
+++ b/parse-results.ipynb
@@ -22,7 +22,8 @@
     "import pandas as pd\n",
     "import yaml\n",
     "\n",
-    "from collections import defaultdict"
+    "from collections import defaultdict\n",
+    "from copy import deepcopy"
    ]
   },
   {
@@ -34,8 +35,6 @@
    "source": [
     "from cr_racing_results import (\n",
     "    RaceResults,\n",
-    "    RaceType,\n",
-    "    update_clusters\n",
     ")"
    ]
   },
@@ -52,31 +51,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "83cd8472-ae4c-47bf-a72f-fe41014cdf22",
+   "execution_count": null,
+   "id": "56939077-8cce-497b-ae4d-62fd66944525",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from itertools import chain, repeat, islice\n",
-    "\n",
-    "POINTS = [100,  98,  96,  94,  92,  90,  88,  86,  84,  82,  80,  78,  76,\n",
-    "        74,  72,  70,  68,  66,  64,  62,  60,  58,  56,  54,  52,  50,\n",
-    "        48,  46,  44,  42,  40,  38,  36,  34,  32,  30,  28,  26,  24,\n",
-    "        22,  20,  20,  20,  20,  20,  20,  20,  20,  20,  20]\n",
-    "\n",
-    "def _pad_infinite(iterable, padding=None):\n",
-    "    return chain(iterable, repeat(padding))\n",
-    "\n",
-    "def _pad(iterable, size, padding=None):\n",
-    "    return islice(_pad_infinite(iterable, padding), size)\n",
-    "\n",
-    "def generate_points(n_places: int):\n",
-    "    return list(_pad(POINTS, n_places, 0))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "id": "da7ce56b-9255-467a-a157-59d4a00ba00c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5347523d-f0b8-4cc5-a893-9bfe44b65623",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "ab24dd2a-787f-4e41-90e0-7e751b5e4b08",
    "metadata": {},
    "outputs": [],
@@ -86,7 +85,7 @@
     "\n",
     "official_clusters = defaultdict(tuple)\n",
     "\n",
-    "clusters_dir = Path('data/clusters/')\n",
+    "clusters_dir = Path(race_config['clusters'])\n",
     "for file in list(clusters_dir.iterdir()):\n",
     "    if file.name.startswith('.'):\n",
     "        continue\n",
@@ -97,166 +96,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "82672b16-a403-4561-8445-fe5a4ea249ca",
+   "execution_count": 5,
+   "id": "68bfb78f-5cb8-4ab8-a19f-6721e62d1182",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def set_tt_cluster(tt_results: pd.DataFrame, clusters: dict[str, tuple[str]], column_name: str = 'cluster') -> None:\n",
-    "    tt_results[column_name] = 'C'\n",
-    "    tt_results.loc[tt_results.gender == 'female', column_name] = 'F'\n",
-    "    for cluster, racers in official_clusters.items():\n",
-    "        tt_results.loc[tt_results.name.str.startswith(racers), column_name] = cluster"
+    "race1 = RaceResults.from_config(race_config['races'][0], official_clusters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "1c16ae65-dcec-41d3-af63-b787cfee3601",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "race2 = RaceResults.from_config(race_config['races'][0], race1.clusters)\n",
+    "# difference"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5dd54f41-03b0-4f45-890f-6a4e35b98574",
+   "id": "27482a69-1f58-434b-b0e7-52f594f7b1f6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "from pathlib import Path\n",
-    "from copy import deepcopy\n",
-    "\n",
-    "race_results = {\n",
-    "    'groups': [],\n",
-    "    'time-trials': []\n",
-    "}\n",
-    "\n",
-    "for race in race_config['groups']:\n",
-    "    race_results['groups'].append(RaceResults.group_from_config(race))"
+    "races = []\n",
+    "cluster_distribution = deepcopy(official_clusters)\n",
+    "for race in race_config['races']:\n",
+    "    races.append(RaceResults.from_config(race, cluster_distribution))\n",
+    "    cluster_distribution = races[-1].clusters\n",
+    "races.sort(key=lambda race: race.order)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a601164b-9ab0-4f83-9697-b176ae188c49",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def shorten_name(name: str) -> str:\n",
-    "    splited_name = name.split(\" \")\n",
-    "    return \" \".join(chain(splited_name[:-1], splited_name[-1][0]))\n",
-    "\n",
-    "group_clusters = defaultdict(set)\n",
-    "for race in race_results['groups']:\n",
-    "    for cluster, results in race.results.items():\n",
-    "        group_clusters[cluster].update(map(shorten_name, results.name.unique()))\n",
-    "\n",
-    "cluster_from_group = set()\n",
-    "for cluster in group_clusters:\n",
-    "    cluster_from_group.update(group_clusters[cluster])\n",
-    "    # group_clusters[cluster].update(official_clusters[cluster])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "c4360f4a-d072-49fb-bca0-9f8a8361bf0c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "250 279 217\n",
-      "438 444 248\n",
-      "603 601 290\n",
-      "288 309 150\n"
-     ]
-    }
-   ],
-   "source": [
-    "has_cluster = set()\n",
-    "original_off_clusters = deepcopy(official_clusters)\n",
-    "\n",
-    "for cluster, group in group_clusters.items():\n",
-    "    official_clusters[cluster] = tuple((set(official_clusters[cluster]) - cluster_from_group) | (group - has_cluster))\n",
-    "    print(len(original_off_clusters[cluster]), len(official_clusters[cluster]), len(group))\n",
-    "    has_cluster.update(group)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ed4d95e1-397e-4f8e-a078-d212c65fd59b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "bb42af2a-484e-4a67-936e-ef1d050fe3eb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for race in race_config['time-trials']:\n",
-    "    race_results['time-trials'].append(RaceResults.tt_from_config(race, official_clusters))\n",
-    "    # tt_results['results'].to_csv(f\"data/tt-results/{tt_results['name']}.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "de22fd6a-941b-4866-9b58-e512035d5b80",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_points_for_race(race_results, race_name: str | None = None) -> pd.DataFrame:\n",
-    "    points_column = 'points'\n",
-    "    if race_name:\n",
-    "        points_column = race_name\n",
-    "    sorted_results = race_results.dropna(subset=['rank_abs']).astype({'rank_abs': int}).sort_values('rank_abs').set_index('rank_abs')\n",
-    "    sorted_results[points_column] = generate_points(sorted_results.shape[0])\n",
-    "    return sorted_results.loc[:, ['name', points_column]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
    "id": "b20c985f-a2ff-4666-8f32-fd717771bd1f",
    "metadata": {},
    "outputs": [],
    "source": [
     "cluster_standing = {}\n",
     "\n",
-    "for race in race_results['groups']:\n",
-    "    for cluster, results in race.results.items():\n",
-    "        race_points = get_points_for_race(results, race.name)\n",
+    "for race in races:\n",
+    "    for cluster, race_points in race.get_race_points().items():\n",
     "        if cluster in cluster_standing:\n",
     "            cluster_standing[cluster] = pd.merge(cluster_standing[cluster], race_points, how='outer', on='name')\n",
     "        else:\n",
-    "            cluster_standing[cluster] = race_points\n",
-    "\n",
-    "for race in race_results['time-trials']:\n",
-    "    for cluster in cluster_standing:\n",
-    "        cluster_results = race.results[race.results['cluster'] == cluster]\n",
-    "        race_points = get_points_for_race(cluster_results, race.name)\n",
-    "        cluster_standing[cluster] = pd.merge(cluster_standing[cluster], race_points, how='outer', on='name')"
+    "            cluster_standing[cluster] = race_points"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "d74fe4f3-39a5-4ba3-9d02-802112ff2e16",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from itertools import chain\n",
-    "race_order = list(map(lambda x: x[-1], sorted(\n",
-    "    chain(\n",
-    "        ((race.order, race.name) for race in race_results['groups']),\n",
-    "        ((race.order, race.name) for race in race_results['time-trials']),\n",
-    "    )\n",
-    ")))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "id": "f7ec8763-549b-401c-96e8-5fb64460dd4a",
    "metadata": {},
    "outputs": [],
@@ -267,22 +160,14 @@
     "}\n",
     "\n",
     "for cluster in cluster_standing:\n",
-    "    all_results = cluster_standing[cluster].set_index('name').loc[:, race_order]\n",
+    "    all_results = cluster_standing[cluster].set_index('name')\n",
     "    all_results['total'] = all_results.sum(axis='columns')\n",
     "    cluster_standing[cluster] = all_results.sort_values('total', ascending=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dbf34259-ee1a-4afb-bd46-a276b0f4b786",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "id": "aaed384f-fb78-4de0-82b8-12c6681ff138",
    "metadata": {},
    "outputs": [],
@@ -295,6 +180,185 @@
     "    data.index += 1\n",
     "    data.to_csv(f'data/cluster_{cluster}.csv')\n",
     "writer.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bb216de-5ac9-4b6a-85d7-9fe33e8e34b3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "9e81780e-6151-4f31-b704-69f40034bfb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bib</th>\n",
+       "      <th>name</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>category</th>\n",
+       "      <th>status</th>\n",
+       "      <th>rank_abs</th>\n",
+       "      <th>result</th>\n",
+       "      <th>result_time</th>\n",
+       "      <th>team</th>\n",
+       "      <th>club</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>136</td>\n",
+       "      <td>Есипов Евгений</td>\n",
+       "      <td>male</td>\n",
+       "      <td>М4 45-49</td>\n",
+       "      <td>Q</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>02:53:18.09</td>\n",
+       "      <td>10398.097</td>\n",
+       "      <td>Кластер B. HBFS Plan B</td>\n",
+       "      <td>Кластер B. HBFS Plan B</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    bib            name gender  category status  rank_abs       result  \\\n",
+       "22  136  Есипов Евгений   male  М4 45-49      Q      23.0  02:53:18.09   \n",
+       "\n",
+       "    result_time                    team                    club  \n",
+       "22    10398.097  Кластер B. HBFS Plan B  Кластер B. HBFS Plan B  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "races[1].group['B'].loc[races[1].group['B'].name.str.startswith('Есипов')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "54253c25-b064-4337-98c1-245e8d5984b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bib</th>\n",
+       "      <th>name</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>category</th>\n",
+       "      <th>status</th>\n",
+       "      <th>rank_abs</th>\n",
+       "      <th>result</th>\n",
+       "      <th>result_time</th>\n",
+       "      <th>team</th>\n",
+       "      <th>club</th>\n",
+       "      <th>cluster</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>179</td>\n",
+       "      <td>Есипов Евгений</td>\n",
+       "      <td>male</td>\n",
+       "      <td>М4 45-49</td>\n",
+       "      <td>Q</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>00:41:16.29</td>\n",
+       "      <td>2476.299</td>\n",
+       "      <td>HBFS</td>\n",
+       "      <td>HBFS</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    bib            name gender  category status  rank_abs       result  \\\n",
+       "58  179  Есипов Евгений   male  М4 45-49      Q      59.0  00:41:16.29   \n",
+       "\n",
+       "    result_time  team  club cluster  \n",
+       "58     2476.299  HBFS  HBFS       B  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "races[1].tt.loc[races[1].tt.name.str.startswith('Есипов')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d7232877-b082-4b7e-b6a3-64b2e450442b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['B']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(filter(lambda clust: 'Есипов Е' in races[1].clusters[clust], races[1].clusters))"
    ]
   },
   {
